[build-system]
requires = ["poetry-core >=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crew-backend"
version = "0.1.0"
description = "A FastAPI backend to host an online game of crew"
readme = "README.md"
authors = ["Chiraag Juvekar <chiraag.juekar@gmail.com>"]
license = "MIT"
classifiers = ["License :: OSI Approved :: MIT License"]
homepage = "https://github.com/chiraag/crew_game"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
fastapi = "^0.71.0"
pydantic = { extras = ["email"], version = "^1.9.0" }
python-multipart = "^0.0.5"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcyrpt"], version = "^1.7.4" }
Jinja2 = "^3.0.3"
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"
google-api-python-client = { version = "^2.34.0", optional = true }
google-auth-httplib2 = { version = "^0.1.0", optional = true }
google-auth-oauthlib = { version = "^0.4.6", optional = true }
requests-oauthlib = { version = "^1.3.0", optional = true }


[tool.poetry.extras]
gmail = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
test = ["requests-oauthlib"]

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
uvicorn = { extras = ["standard"], version = "^0.16.0" }

[tool.isort]
profile = "black"
