[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "crew-helper"
authors = [{ name = "Chiraag Juvekar", email = "chiraag.juekar@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.6, <4"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["urwid", "termcolor"]

[tool.flit.module]
name = "crew_helper"

[project.scripts]
crew_helper = "crew_helper.main:main"

[project.optional-dependencies]
dev = ["isort", "black"]

[project.urls]
Home = "https://github.com/chiraag/crew_game"

[tool.isort]
profile = "black"
